deployment/kubernetes/frog-pod.yaml
apiVersion: "v1"
kind: Pod
metadata:
  name: frog-test-pod
  labels:
    app: frog
    tier: backend
    environment: test

spec:
  containers:
  - name: frog-2
    image: arasmumcuyan/frog:test
    imagePullPolicy: IfNotPresent
    # command: [ "/bin/sh", "-c", "env" ]
    # env:
    # - name: MONGO_URL
    #   valueFrom:
    #     configMapKeyRef:
    #       name: frog-cm
    #       key: MONGO_URL

  imagePullSecrets:
    - name: regcred
