deployment/kubernetes/mongo-pod.yaml
apiVersion: "v1"
kind: Pod
metadata:
  name: mongo-test
  labels:
    name: testauto
    app: demo
spec:
  containers:
    - name: mongodb
        image: bitnami/mongodb
        imagePullPolicy: Never
        ports:
          - containerPort: 27017
            name: http
            protocol: TCP
