deployment/kubernetes/redis-pod.yaml
apiVersion: "v1"
kind: Pod
metadata:
  name: test
  labels:
    name: testauto
    app: demo
spec:
  containers:    
    - name: redis
      image: redis
      imagePullPolicy: Never
      ports:
        - containerPort: 6379
          name: http
          protocol: TCP
