deployment/kubernetes/frog-app-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: frog-app-deployment
  labels:
    app: frog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frog
      
  # POD declaration
  template:
    metadata:
      labels:
        app: frog
    spec:
      containers:
        - name: frog
          image: arasmumcuyan/frog:test
          imagePullPolicy: Always
          command: ["node", "main.js"]
          ports:
            - containerPort: 3000
            - containerPort: 3002
---
######## Service Configuration ########
kind: Service
apiVersion: v1
metadata:
  name: frog-app-svc
spec:
  selector: # for pods     
    app: frog
  
  type: ClusterIP # external port it was (NodePort)
  ports:
  - port: 3000
    targetPort: 3000 # port of pod is listening which service will be forwarded to
    protocol: TCP

---
######## Service Configuration ########
kind: Service
apiVersion: v1
metadata:
  name: frog-sharedb-svc
spec:
  selector: # for pods     
    app: frog
  
  type: ClusterIP # external port 
  ports:
  - port: 3002 
    targetPort: 3002 # port of pod is listening which service will be forwarded to
