deployment/kubernetes/frog-dash-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: frog-dash-deployment
  labels:
    app: frog-dash

spec:
  replicas: 1
  selector:
    matchLabels:
      app: frog-dash

  # POD declaration
  template:
    metadata:
      labels:
        app: frog-dash

    spec:
      containers:
        - name: frog-dash
          image: arasmumcuyan/frog:test
          imagePullPolicy: Always
          command: ["node", "main.js"]
          ports:
            - containerPort: 3000
---
######## Service Configuration ########
kind: Service
apiVersion: v1
metadata:
  name: frog-dash-svc
spec:
  selector: # for pods     
    app: frog-dash
  
  type: ClusterIP 
  ports:
  - port: 3000   # port of service will be listening from internal ip address (kube-proxy will forward to this address)
    targetPort: 3000   # port of pod is listening which service wiil forward
