deployment/kubernetes/frog-dashboard-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: frog-dash-test-deployment
  labels:
    app: frog-dash
    env-type: test

spec:
  replicas: 1
  selector:
    matchLabels:
      app: frog-dash
      tier: backend
      env-type: test

  # POD declaration
  template:
    metadata:
      labels:
        app: frog-dash
        tier: backend
        env-type: test

    spec:
      containers:
        - name: frog-dash
          image: arasmumcuyan/frog:test
          imagePullPolicy: Always
          command: ["node", "main.js"]
          ports:
            - containerPort: 3002
      imagePullSecrets:
        - name: regcred
---
######## Service Configuration ########
######## Open an external port to outside of the cluster, type=NodePort ##########
kind: Service
apiVersion: v1
metadata:
  name: frog-dashboard-service
spec:
  selector: # for pods     
    app: frog-dash
    env-type: test
  
  type: ClusterIP # external port 
  ports:
  - port: 3002   # port of service will be listening from Node (will be sent to service on behalf of end-user)
    targetPort: 3002   # port of pod is listening which service wiil forward
