deployment/kubernetes/frog-nginx-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: frog-nginx-deployment
  labels:
    app: frog-nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frog-nginx
  template:
    metadata:
      labels:
        app: frog-nginx
    spec:
      containers:
      - image: nginx
        name: nginx
        ports:
          - containerPort: 80

        volumeMounts:
        - name: nginx-conf
          readOnly: true
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf

      volumes:
        - name: nginx-conf
          configMap:
            name: frog-nginx-cm
---
######## Service Configuration ########
kind: Service
apiVersion: v1
metadata:
  name: frog-nginx-service
spec:
  selector: # for pods     
    app: frog-nginx
  
  type: ClusterIP 
  ports:
  - port: 80   # port of service will be listening from internal ip address (kube-proxy will forward to this address)
    targetPort: 80   # port of pod is listening which service wiil forward
