deployment/kubernetes/frog-ingress-dashboard.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frog-ingress-dash
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"

    certmanager.k8s.io/issuer: "letsencrypt-prod"
    certmanager.k8s.io/acme-challenge-type: http01
    
spec:
  tls:                                                                      
  - hosts:                                                                  
    - chilifrog.tk
    secretName: chilifrog-tls
  rules:
  - host: chilifrog.tk
    http:
      paths:
      - path: /dashboard/?(.*)
        backend:
          serviceName: frog-dashboard-service
          servicePort: 3000
